added square flag and linking target searching

--- a/src/main/resources/assets/miniflags/lang/en_US.lang
+++ b/src/main/resources/assets/miniflags/lang/en_US.lang
@@ -4,3 +4,38 @@ gui.labels.LinkedFlags=Linked Flag
 gui.labels.FlagName=Name:
 gui.labels.FlagHash=ID
 gui.labels.LinkTo=Link To:
+
+# Tile Names(Triangle Flag)
+FlagBlock.tri.white.name=Triangle Flag(White)
+FlagBlock.tri.orange.name=Triangle Flag(Orange)
+FlagBlock.tri.magenta.name=Triangle Flag(Magenta)
+FlagBlock.tri.lightBlue.name=Triangle Flag(Light Blue)
+FlagBlock.tri.yellow.name=Triangle Flag(Yellow)
+FlagBlock.tri.lime.name=Triangle Flag(Lime)
+FlagBlock.tri.pink.name=Triangle Flag(Pink)
+FlagBlock.tri.gray.name=Triangle Flag(Gray)
+FlagBlock.tri.silver.name=Triangle Flag(Silver)
+FlagBlock.tri.cyan.name=Triangle Flag(Cyan)
+FlagBlock.tri.purple.name=Triangle Flag(Purple)
+FlagBlock.tri.blue.name=Triangle Flag(Blue)
+FlagBlock.tri.brown.name=Triangle Flag(Brown)
+FlagBlock.tri.green.name=Triangle Flag(Green)
+FlagBlock.tri.red.name=Triangle Flag(Red)
+FlagBlock.tri.black.name=Triangle Flag(Black)
+# Tile Names(Square Flag)
+FlagBlock.squ.white.name=Square Flag(White)
+FlagBlock.squ.orange.name=Square Flag(Orange)
+FlagBlock.squ.magenta.name=Square Flag(Magenta)
+FlagBlock.squ.lightBlue.name=Square Flag(Light Blue)
+FlagBlock.squ.yellow.name=Square Flag(Yellow)
+FlagBlock.squ.lime.name=Square Flag(Lime)
+FlagBlock.squ.pink.name=Square Flag(Pink)
+FlagBlock.squ.gray.name=Square Flag(Gray)
+FlagBlock.squ.silver.name=Square Flag(Silver)
+FlagBlock.squ.cyan.name=Square Flag(Cyan)
+FlagBlock.squ.purple.name=Square Flag(Purple)
+FlagBlock.squ.blue.name=Square Flag(Blue)
+FlagBlock.squ.brown.name=Square Flag(Brown)
+FlagBlock.squ.green.name=Square Flag(Green)
+FlagBlock.squ.red.name=Square Flag(Red)
+FlagBlock.squ.black.name=Square Flag(Black)
